--- a/string/CMakeLists.txt
+++ b/string/CMakeLists.txt
@@ -1,8 +1,5 @@
-cmake_minimum_required(VERSION 3.8)
-project(Testing CXX)
-
 cmake_minimum_required(VERSION 3.14)
-project(my_project)
+project(cpp_string)
 
 set(CMAKE_CXX_STANDARD 17)
 
